# tunnel-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/tunnel_agent/: __init__.py
src/tunnel_agent/cli/: main.py
src/tunnel_agent/container/: backend.py  renderer.py
src/tunnel_agent/container/templates/: Dockerfile.tpl  docker-compose.yml.tpl  entrypoint.sh.tpl  redsocks.conf.tpl  wg0.conf.tpl
src/tunnel_agent/core/: __init__.py  config.py  models.py
test/: test_config.py  test_models.py  test_renderer.py
